--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("com.google.devtools.ksp") version "1.9.22-1.0.16"
 }
 
 android {
@@ -37,6 +38,11 @@ android {
 }
 
 dependencies {
+    //room DB 의존성 추가
+    implementation "androidx.room:room-runtime:2.6.1"
+    implementation "androidx.room:room-ktx:2.6.1"
+    ksp "androidx.room:room-compiler:2.6.1"
+
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.9.0"
@@ -50,7 +56,6 @@ dependencies {
 
     // 캘린더 뷰 라이브러리
     implementation 'com.kizitonwose.calendar:view:2.4.0'
-
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
